--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,7 +48,7 @@ a {
 }
 
 p {
-    font-size: 16px;
+    font-size: 14px;
 }
 
 .hero {
@@ -62,18 +62,18 @@ p {
 
 .float-left {
     float: left;
-    margin-right: 25px;
+    margin-right: 15px;
 }
 
 .float-right {
     float: right;
-    margin-left: 25px;
+    margin-left: 15px;
 }
 
 .content {
     width: 75%;
     display: inline-block;
-    margin-left: 20px;
+    margin-left: 12px;
 }
 
 .benefits {
@@ -105,16 +105,19 @@ p {
 .benefit-lead h3 {
     margin-bottom: 10px;
     text-align: center;
+    font-size: smaller;
 }
 
 .benefit-brand h3 {
     margin-bottom: 10px;
     text-align: center;
+    font-size: smaller;
 }
 
 .benefit-cost h3 {
     margin-bottom: 10px;
     text-align: center;
+    font-size: smaller;
 }
 
 .benefit-lead img {
@@ -164,47 +167,29 @@ p {
 
 .search-engine-optimization img {
     max-height: 200px;
-    float: left
 }
 
 .online-reputation-management img {
     max-height: 200px;
-    float: right
 }
 
 .social-media-marketing img {
     max-height: 200px;
-    float: left
 }
 
 .search-engine-optimization h2 {
-    margin-bottom: 60px;
-    font-size: 36px;
+    margin-bottom: 20px;
+    font-size: 20px;
 }
 
 .online-reputation-management h2 {
-    margin-bottom: 40px;
-    font-size: 36px;
+    margin-bottom: 20px;
+    font-size: 20px;
 }
 
 .social-media-marketing h2 {
     margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.search-engine-optimization p {
-    display: flex; 
-    align-items: center; 
-}
-
-.online-reputation-management p {
-    display: flex; 
-    align-items: center; 
-}
-
-.social-media-marketing p {
-    display: flex; 
-    align-items: center; 
+    font-size: 20px;
 }
 
 .footer {
